              (Noble Paul via shalin)

2. SOLR-964:  XPathEntityProcessor now ignores DTD validations
              (Fergus McMenemie, Noble Paul via shalin)

3. SOLR-1029: Standardize Evaluator parameter parsing and added helper functions for parsing all evaluator
              parameters in a standard way.
              (Noble Paul, shalin)

4. SOLR-1081: Change EventListener to be an interface so that components such as an EntityProcessor or a Transformer
              can act as an event listener.
              (Noble Paul, shalin)

5. SOLR-1027: Alias the 'dataimporter' namespace to a shorter name 'dih'.
              (Noble Paul via shalin)

6. SOLR-1084: Better error reporting when entity name is a reserved word and data-config.xml root node
              is not <dataConfig>.
              (Noble Paul via shalin)

================== Release 1.3.0 20080915 ==================

Status
------
This is the first release since DataImportHandler was added to the contrib solr distribution.
The following changes list changes since the code was introduced, not since
the first official release.


Detailed Change List
--------------------

New Features
1. SOLR-700:  Allow configurable locales through a locale attribute in fields for NumberFormatTransformer.
              (Stefan Oestreicher, shalin)

Changes in runtime behavior

Bug Fixes
1. SOLR-704:  NumberFormatTransformer can silently ignore part of the string while parsing. Now it tries to
              use the complete string for parsing. Failure to do so will result in an exception.
              (Stefan Oestreicher via shalin)

2. SOLR-729:  Context.getDataSource(String) gives current entity's DataSource instance regardless of argument.
              (Noble Paul, shalin)

3. SOLR-726:  Jdbc Drivers and DataSources fail to load if placed in multicore sharedLib or core's lib directory.
              (Walter Ferrara, Noble Paul, shalin)

Other Changes

